# SaveMySnippets-DRF-REACT

./: README.md  docker-compose.yaml
client/: index.html  package-lock.json  package.json  tsconfig.app.json
client/src/: App.tsx  index.css
client/src/components/common/: BackButton.tsx  LoadingButton.tsx  Logo.tsx  UserButton.tsx
client/src/components/languages/: LanguageSelector.tsx
client/src/components/layouts/: AuthLayout.tsx  Footer.tsx  Header.tsx  ProtectedLayout.tsx  RootLayout.tsx
client/src/components/snippets/: CodeHighlighter.tsx  CreateSnippetDialog.tsx  SnippetCard.tsx  SnippetDetailSkeleton.tsx  SnippetForm.tsx  SnippetsListEmpty.tsx
client/src/hooks/: useLogin.tsx
client/src/lib/: api.ts
client/src/pages/: Contact.tsx  Explore.tsx  Home.tsx
client/src/routes/: index.tsx
client/src/store/: index.ts
client/src/types/: index.ts
client/src/validations/: auth.ts  snippet.ts
server/: .env  .env.production  Dockerfile  db.sqlite3  pyproject.toml
server/accounts/: admin.py  models.py  serializers.py  urls.py  views.py
server/accounts/migrations/: 0001_initial.py  0002_alter_user_username.py
server/accounts/serializers/: auth_serializers.py  password_reset_serializers.py
server/accounts/tests/: test_apis.py  test_models.py
server/accounts/utils/: mail.py
server/core/: exceptions.py  settings.py  urls.py
server/snippets/: admin.py  models.py  permissions.py  serializers.py  urls.py  views.py
server/snippets/migrations/: 0001_initial.py  0002_tag_snippet_tags.py  0003_snippet_slug_alter_language_extension_and_more.py
(+21 files in other folders)
